--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>About 关于我</title>
   <link rel="stylesheet" href="styles.css?v=1.0" />
 </head>
 <body>
   <header>
-    <h1>Grüezi</h1>
+    <h1>About 关于我</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home 主页</a></li>
@@ -21,15 +21,15 @@
 
   <main>
     <section>
-      <h2>Latest Posts 最近更新</h2>
-      <ul>
-        <li><a href="articles/article1.html">Article 1 Title</a></li>
-      </ul>
-    </section>
+      <h2>Hello! 你好！</h2>
+      <p>
+        I’m Danyang. This is my personal space where I share thoughts, stories, and photos from my journey.
+        Whether it’s an essay, a reflection, or something random, I write with curiosity and joy.
+      </p>
 
-    <section>
-      <h2>Gallery</h2>
-      <p>Images will be displayed here.</p>
+      <p>
+        欢迎来到我的网站！我喜欢写作，摄影，也热爱探索这个世界。这个网站是我记录生活和分享想法的小天地。
+      </p>
     </section>
   </main>
 
