--- a/articles.html
+++ b/articles.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Essays 随笔</title>
   <link rel="stylesheet" href="styles.css?v=1.0" />
 </head>
 <body>
   <header>
-    <h1>Grüezi</h1>
+    <h1>Essays 随笔</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home 主页</a></li>
@@ -21,15 +21,12 @@
 
   <main>
     <section>
-      <h2>Latest Posts 最近更新</h2>
+      <h2>Essay Collection</h2>
       <ul>
-        <li><a href="articles/article1.html">Article 1 Title</a></li>
+        <li><a href="articles/article1.html">On Finding Stillness in a Busy World</a></li>
+        <li><a href="articles/article2.html">Why I Write in Two Languages</a></li>
+        <li><a href="articles/article3.html">Thoughts on Home, Away from Home</a></li>
       </ul>
-    </section>
-
-    <section>
-      <h2>Gallery</h2>
-      <p>Images will be displayed here.</p>
     </section>
   </main>
 
