--- a/articles.html
+++ b/articles.html
@@ -23,9 +23,8 @@
     <section>
       <h2>Essay Collection</h2>
       <ul>
-        <li><a href="articles/article1.html">On Finding Stillness in a Busy World</a></li>
-        <li><a href="articles/article2.html">Why I Write in Two Languages</a></li>
-        <li><a href="articles/article3.html">Thoughts on Home, Away from Home</a></li>
+        <li><a href="articles/article1.html">Coming soon 即将发布，敬请期待</a></li>
+       
       </ul>
     </section>
   </main>
