--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <p>YouTube: <a href="https://www.youtube.com/@liudy11" target="_blank">@liudy11</a></p>
        
       <h2>Send Me a Message</h2>
-      <form action="#" method="post">
+      <form action="https://formspree.io/f/meoawkkd" method="POST">
         <label for="name">Name 姓名</label>
         <input type="text" id="name" name="name" required />
 
