--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h2>Latest Posts 最近更新</h2>
       <ul>
-        <li><a href="articles/article1.html">Article 1 Title</a></li>
+        <li><a href="articles/article1.html">测试一下，点进来看看 test test</a></li>
       </ul>
     </section>
 
