--- a/about.html
+++ b/about.html
@@ -21,14 +21,23 @@
 
   <main>
     <section>
-      <h2>Hello! 你好！</h2>
+      <h2>Hi 你好呀~</h2>
       <p>
-        I’m Danyang. This is my personal space where I share thoughts, stories, and photos from my journey.
-        Whether it’s an essay, a reflection, or something random, I write with curiosity and joy.
+        Welcome to my space. A blog about <b>Personal Reflection</b>, <b>Curiosity</b>, <b>DIY projects</b>, <b>Serendipities</b>, and much more!
+      <p>  
+      <p>
+        I'm <b>Schneuggli</b>, a 32 year old female physicist who lives in Switzerland 🇨🇭 since Sept 2019.
+      <p><font color = 'green'>I see myself more as a tailor and an engineer than a physicist but now I still make a living as a physicist so just accept the fact.😌</font> 
       </p>
+      </p>
+      <p>I am from China 🇨🇳, so sometimes I also write blogs in my native language.🤓</p>
 
       <p>
-        欢迎来到我的网站！我喜欢写作，摄影，也热爱探索这个世界。这个网站是我记录生活和分享想法的小天地。
+      欢迎来到我的网站！
+      </p>
+      <p>
+      我是一个会做衣服的物理学女博士。2019年开始在瑞士居住生活，你可以叫我Schneuggli😋
+      在这里分享我的兴趣，想法，手工项目和生活小确幸，以及更多！
       </p>
     </section>
   </main>
