--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       欢迎来到我的网站！
       </p>
       <p>
-      我是一个会做衣服的物理学女博士。2019年开始在瑞士居住生活，你可以叫我Schneuggli😋
+      我是一个会做衣服的物理学女博士，2019年开始在瑞士居住生活，你可以叫我Schneuggli😋
       在这里分享我的兴趣，想法，手工项目和生活小确幸，以及更多！
       </p>
     </section>
