first article published

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home 主页</a></li>
         <li><a href="about.html">About 关于我</a></li>
-        <li><a href="articles.html">Essays 随笔</a></li>
+        <li><a href="articles.html">Articles 随笔</a></li>
         <li><a href="contact.html">Contact 联系</a></li>
       </ul>
     </nav>
@@ -21,23 +21,23 @@
 
   <main>
     <section>
-      <h2>Hi 你好呀~</h2>
+      <h2>Grüezi~</h2>
       <p>
         Welcome to my space. A blog about <b>Personal Reflection</b>, <b>Curiosity</b>, <b>DIY projects</b>, <b>Serendipities</b>, and much more!
       <p>  
       <p>
-        I'm <b>Schneuggli</b>, a 32 year old female physicist who lives in Switzerland 🇨🇭 since Sept 2019.
-      <p><font color = 'green'>I see myself more as a tailor and an engineer than a physicist but now I still make a living as a physicist so just accept the fact.😌</font> 
+        I'm <b>Danyang</b>, a 32 year old female physicist who lives in Switzerland 🇨🇭 since Sept. 2019, and live together with my partner Mr. Bubi since 2024. 
+      <p><font color = 'green'>I see myself more as a tailor and an engineer but now I still make a living as a physicist so it's my main profession.😌</font> 
       </p>
-      </p>
-      <p>I am from China 🇨🇳, so sometimes I also write blogs in my native language.🤓</p>
+
+      <p>I am from China 🇨🇳, so I also write blogs in my native language sometimes.</p>
 
       <p>
       欢迎来到我的网站！
       </p>
       <p>
-      我是一个会做衣服的物理学女博士，2019年开始在瑞士居住生活，你可以叫我Schneuggli😋
-      在这里分享我的兴趣，想法，手工项目和生活小确幸，以及更多！
+      我是一个会做衣服的物理女博士，2019年开始在瑞士学习工作和生活，你可以叫我Danyang😋
+      我在这里分享我的兴趣爱好，想法，手工项目和小确幸，以及更多！
       </p>
     </section>
   </main>
