--- a/articles.html
+++ b/articles.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Essays 随笔</title>
+  <title>Articles 随笔</title>
   <link rel="stylesheet" href="styles.css?v=1.0" />
 </head>
 <body>
   <header>
-    <h1>Essays 随笔</h1>
+    <h1>Articles 随笔</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home 主页</a></li>
         <li><a href="about.html">About 关于我</a></li>
-        <li><a href="articles.html">Essays 随笔</a></li>
+        <li><a href="articles.html">Articles 随笔</a></li>
         <li><a href="contact.html">Contact 联系</a></li>
       </ul>
     </nav>
@@ -21,9 +21,9 @@
 
   <main>
     <section>
-      <h2>Essay Collection</h2>
+      <h2>Blogs</h2>
       <ul>
-        <li><a href="articles/article1.html">Coming soon 即将发布，敬请期待</a></li>
+        <li><a href="articles/article1.html">2025.04.27 复活节里谈轮回转世</a></li>
        
       </ul>
     </section>
