--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Grüezi</h1>
+    <h1>Grüezi mitenand</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home 主页</a></li>
         <li><a href="about.html">About 关于我</a></li>
-        <li><a href="articles.html">Essays 随笔</a></li>
+        <li><a href="articles.html">Articles 随笔</a></li>
         <li><a href="contact.html">Contact 联系</a></li>
       </ul>
     </nav>
@@ -23,7 +23,7 @@
     <section>
       <h2>Latest Posts 最近更新</h2>
       <ul>
-        <li><a href="articles/article1.html">测试一下，点进来看看 test test</a></li>
+        <li><a href="articles/article1.html">2025.04.27复活节里谈轮回转世</a></li>
       </ul>
     </section>
 
