--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home 主页</a></li>
         <li><a href="about.html">About 关于我</a></li>
-        <li><a href="articles.html">Essays 随笔</a></li>
+        <li><a href="articles.html">Articles 随笔</a></li>
         <li><a href="contact.html">Contact 联系</a></li>
       </ul>
     </nav>
@@ -23,10 +23,10 @@
     <section>
         <h2>Follow me on Instagram</h2>
         <p>Instagram: <a href="https://instagram.com/liudy11" target="_blank">@liudy11</a></p>
-        <h2>Check my YouTube Channel</h2>
+        <h2>Check my YouTube channel</h2>
         <p>YouTube: <a href="https://www.youtube.com/@liudy11" target="_blank">@liudy11</a></p>
        
-      <h2>Send Me a Message</h2>
+      <h2>Send me a message</h2>
       <form action="https://formspree.io/f/meoawkkd" method="POST">
         <label for="name">Name 姓名</label>
         <input type="text" id="name" name="name" required />
